created a function for the h1 and the background color

--- a/shop.css
+++ b/shop.css
@@ -19,3 +19,10 @@ td {
     border: 1px solid grey;
 }
 
+.highlight {
+    color: white;
+    background-color: black;
+    padding: 10px;
+    width: 250px;
+    text-align: center;
+  }
